Semi-final commit